<resources>
    <string name="app_name">LoanCalculatorIntent</string>
    <string name="car_price">Car Price</string>
    <string name="downpaymenr">Down Payment</string>
    <string name="loan_period">Loan Period</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="calculate">Calculate</string>
    <string name="month_repayment">Month Repayment</string>
    <string name="close">Close</string>
</resources>
